# LAS_FLAS

./: .gitignore  DPQ_LAS&FLAS.ipynb  LAS_FLAS_DPQ_colors.ipynb  LICENSE  README.md  requirements.txt
.github/workflows/: BuildAndPublish.yml
.ipynb_checkpoints/: DPQ_LAS&FLAS-checkpoint.ipynb  DPQ_LAS&FLAS_withImages_FV50-Kai-checkpoint.ipynb
c/: CMakeLists.txt
c/src/: det_random.h  fast_linear_assignment_sorter.h  flas_adapter.c  grid_map.h  junker_volgenant_solver.c  junker_volgenant_solver.h  main.c  map_place.c
c_python/: .gitignore  CMakeLists.txt  README.md  compile.sh  info.md  pyproject.toml  requirements.txt  requirements_py37.txt  run.sh  setup.py
c_python/clib/: CMakeLists.txt  run.sh
c_python/clib/src/: fast_linear_assignment_sorter.cpp  feature_data.cpp  flas_adapter.cpp  flas_c.cpp  grid_map.cpp  map_place.cpp
c_python/examples/: create_grids.py  main.py  metrics.py  simple_tables.py  using_arrangements.py
c_python/ext/: det_random.cpp  det_random.hpp  fast_linear_assignment_sorter.cpp  fast_linear_assignment_sorter.hpp  feature_data.cpp  feature_data.hpp  flas_adapter.cpp  flas_adapter.hpp  grid_map.cpp  grid_map.hpp  junker_volgenant_solver.cpp  junker_volgenant_solver.hpp  map_field.cpp  map_field.hpp  map_place.cpp  map_place.hpp  metrics.hpp
c_python/ext/lap_solver/: lap.h
c_python/ext/lap_solver/core/: lap_cache.h  lap_caching_iterator.h  lap_cost.h  lap_direct_iterator.h  lap_solver.h
c_python/ext/lap_solver/core/omp/: lap_caching_iterator.h  lap_cost.h  lap_direct_iterator.h  lap_solver.h  lap_worksharing.h
c_python/flas/: __init__.py  flas_c.cpp
c_python/scripts/: create-new-tag.sh  install-conda.sh  link-lib.sh
c_python/src/: det_random.c  fast_linear_assignment_sorter.c  feature_data.c  feature_data.h  flas_adapter.h  flas_c.cpp  grid_map.c  main.py
c_python/src/flas/: __init__.py  metrics.py
c_python/src/flas_cpp/: flas_c.cpp  flas_cpp.cpp
c_python/src/vc_flas/: __init__.py  metrics.py
c_python/tests/: ideas.py  main.py  test.py  test_grids.py  test_metrics.py
java/: .gitignore  README.md  build.gradle  settings.gradle
java/src/main/java/de/htw/lcs/ag/: ArrangingGrid.java  Describable.java  DistanceFunction.java  Grid.java
java/src/main/java/de/htw/lcs/ag/evaluation/: DistancePreservation.java
java/src/main/java/de/htw/lcs/ag/las/: FLAS.java  LAS.java
java/src/main/java/de/htw/lcs/ag/solver/: JonkerVolgenantGo.java
java/src/test/java/de/htw/lcs/ag/: ConstrainExample.java  Examples.java
java/src/test/java/de/htw/lcs/ag/dataset/: ColorDataset.java  Dataset.java  ImageDataset.java
python/: LAS_FLAS_DPQ_colors.ipynb
